tests/NormalTests/paczka2/big_fuzzy/78341044.err
Error in line 2: rQ6h A644 85,7
Error in line 10: UTFlm1wk7Ch S906 83,8
Error in line 13: S906 A644 56,9
Error in line 12: UTFlm1wk7Ch A644 53,1
Error in line 7: kWVyc83O A681 28,8
Error in line 27: rQ6h S938 72,7
Error in line 47: rQ6h S938 96,5
Error in line 53: UTFlmjwk7Ch A68j 28,4
Error in line 58: S906 S906 53,9
Error in line 67: UTFlm1wk7Ch A681 157,66
Error in line 64: UTFlm1wk7Ch A681 66,5
Error in line 40: AZAk A644 85,5
Error in line 71: kWVyc83O A644 40,7
Error in line 91: UTFlm1wk7Ch S906 8,7
Error in line 84: kWVyc83O A681 93,1
Error in line 93: GNrQoL8p A644 88,0
Error in line 109: S906 A644 5,4
Error in line 123: C9HfNT S906 74,1
Error in line 112: rQ6h A681 31,2
Error in line 142: S906 S938 -3,3
Error in line 135: UTFlm1wk7Ch A681 284,1
Error in line 134: S906 S938 54,6
Error in line 141: rQ6h A644 2,4
Error in line 173: kWVyc83O A681 118,9
Error in line 175: AZAk S938 22,4
Error in line 193: C9HfNT S906 76,5
Error in line 185: AZAk S906 18,3
Error in line 200: AZAk A681 75,5
Error in line 204: kWVyc83O S938 50,49
Error in line 194: GNrQoL8p S938 34,7
Error in line 206: S906 A644 48,2
Error in line 187: kWVyc83O A681 78,4
Error in line 212: S906 S938 46,9
Error in line 215: AZAk A644 80,+
Error in line 213: kWVyc83O S938 87,7
Error in line 218: GNrQoL8p A644 90,3
Error in line 222: UTFlm1wk7Ch A681 53,3
Error in line 216: AZAk S906 18,3
Error in line 224: UTFlm1wk7Ch S906 53,2
Error in line 229: UTFlm1wk7Ch A681 19,3
Error in line 220: S906 A681 67,0
Error in line 235: kWVyc83O A681 103,4
Error in line 240: rQ6h A644 67,2
